--- a/playbook.yml
+++ b/playbook.yml
@@ -13,7 +13,13 @@
         - lsof
         - make
         - wget
-        - docker.io
+    - stat: path=/usr/bin/docker
+      register: dockerbin
+    - name: install docker:
+      command: wget -qO- https://get.docker.com/ | sh
+      when: dockerbin.stat.exists == False
+    - name: add vagrant to docker group
+      command: sudo usermod -aG docker vagrant
     - name: increase filedescriptor limit in sysctl
       sysctl: name="fs.file-max" value="500000" sysctl_set=yes state=present reload=yes
     - name: enable docker
@@ -83,4 +89,10 @@
 
     - name: increase maximum interface backlog
       sysctl: name="net.core.netdev_max_backlog" value="300000" sysctl_set=yes state=present reload=yes
+
+    - name: download docker compose
+      get_url: url=https://github.com/docker/compose/releases/download/1.2.0/docker-compose-Linux-x86_64  dest=/usr/bin/docker_compose
+
+    - name: set docker compose executable
+      file: path=/usr/bin/docker_compose state=touch mode=0755
 
