--- a/playbook.yml
+++ b/playbook.yml
@@ -15,7 +15,7 @@
         - wget
     - stat: path=/usr/bin/docker
       register: dockerbin
-    - name: install docker:
+    - name: install docker
       command: wget -qO- https://get.docker.com/ | sh
       when: dockerbin.stat.exists == False
     - name: add vagrant to docker group
@@ -91,7 +91,7 @@
       sysctl: name="net.core.netdev_max_backlog" value="300000" sysctl_set=yes state=present reload=yes
 
     - name: download docker compose
-      get_url: url=https://github.com/docker/compose/releases/download/1.2.0/docker-compose-Linux-x86_64  dest=/usr/bin/docker_compose
+      get_url: url=https://github.com/docker/compose/releases/download/1.3.0rc1/docker-compose-Linux-x86_64  dest=/usr/bin/docker_compose
 
     - name: set docker compose executable
       file: path=/usr/bin/docker_compose state=touch mode=0755
