--- a/workdir/containers/amoc_slave/Dockerfile
+++ b/workdir/containers/amoc_slave/Dockerfile
@@ -1,8 +1,9 @@
 FROM centos:7
-MAINTAINER examples@docker.com
+
+MAINTAINER pawel.pikula@erlang-solutions.com
 
 RUN yum install -y epel-release
-RUN yum install -y supervisor openssh-server
+RUN yum install -y supervisor openssh-server tar gzip unzip
 RUN echo 'root:root' |chpasswd && sshd-keygen
 
 COPY supervisor.conf /etc/supervisor/supervisord.conf
